# diff2test

./: .gitignore  README.md  pyproject.toml
diff2test/: __init__.py  ai_client.py  cli_parser.py  file_writer.py  git_handler.py  logger.py  main.py  models.py  prompt_builder.py  response_parser.py
diff2test/tests/: test_ai_client.py  test_cli_parser.py  test_file_writer.py  test_git_handler.py  test_logger.py  test_prompt_builder.py  test_response_parser.py
test_files/: add.py
test_files/results/test_files/: test_add.py
