[project]
name = "diff2test"
version = "0.1.0"
description = ""
authors = [
    {name = "yoon-yoo-sang",email = "yyss6188@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform (>=1.95.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
